--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@
     border-bottom:20px solid rgb(94, 255, 0);
     border-right:20px solid rgb(94, 255, 0);
     height:15rem;
-    background: url("../images/bot_1.jpg");
+    background: url("./images/bot_1.jpg");
     background-repeat: no-repeat;
     background-position:center;
     background-size: cover;
@@ -130,22 +130,22 @@
     background-position:center;
     background-size: cover;
       }
-      25%{background: url("../images/bot_2.jpg");
+      25%{background: url("./images/bot_2.jpg");
       background-repeat: no-repeat;
     background-position:center;
     background-size: cover;
       }
-      50%{background: url("../images/bot_3.jpg");
+      50%{background: url("./images/bot_3.jpg");
       background-repeat: no-repeat;
     background-position:center;
     background-size: cover;
       }
-      75%{background: url("../images/bot_4.jpg");
+      75%{background: url("./images/bot_4.jpg");
       background-repeat: no-repeat;
     background-position:center;
     background-size: cover;
       }
-      100%{background: url("../images/bot_5.jpg");
+      100%{background: url("./images/bot_5.jpg");
       background-repeat: no-repeat;
     background-position:center;
     background-size: cover;
